exception add and loggers